--- a/html/app/themes/ctba-2016/package.json
+++ b/html/app/themes/ctba-2016/package.json
@@ -20,6 +20,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "0.4.x",
+    "bower": "1.7.x",
     "grunt-autoprefixer": "3.0.x",
     "grunt-contrib-csslint": "0.4.x",
     "grunt-contrib-imagemin": "0.9.x",
