--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     {
       "type": "composer",
       "url": "http://wpackagist.org"
-    }
+    },
   ],
   "require": {
     "php": ">=5.4",
@@ -37,6 +37,7 @@
     "wpackagist-plugin/admin-menu-manager": "1.0.x",
     "wpackagist-plugin/advanced-custom-fields": "4.4.x",
     "wpackagist-plugin/custom-contact-forms": "7.8.x",
+		"wpackagist-plugin/wp-mail-smtp": "0.9.x",
     "wpackagist-plugin/cmb2": "2.2.x"
   },
   "require-dev": {
