Move cmb2 to plugins mu and install wp-help

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ html/app/plugins-mu/*
 !html/app/plugins-mu/ti-roles-and-capabilities.php
 !html/app/plugins-mu/ti-widgets.php
 !html/app/plugins-mu/ti-wordpress-seo.php
+!html/app/plugins-mu/cmb2.php
 
 ### Themes
 .sass-cache
