--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
     "wpackagist-plugin/wp-robots-txt": "1.1.x",
     "wpackagist-plugin/wp-security-audit-log": "2.4.x",
     "wpackagist-plugin/brute-force-login-protection": "1.5.x",
-    "wpackagist-plugin/sf-move-login": "2.2.x",
     "wpackagist-plugin/safe-redirect-manager": "1.7.x",
     "wpackagist-plugin/post-type-archive-links": "1.3.x",
     "wpackagist-plugin/admin-menu-manager": "1.0.x",
     "wpackagist-plugin/advanced-custom-fields": "4.4.x",
     "wpackagist-plugin/custom-contact-forms": "7.8.x",
 		"wpackagist-plugin/wp-mail-smtp": "0.9.x",
+		"wpackagist-plugin/wp-help": "1.4.x",
     "wpackagist-plugin/cmb2": "2.2.x"
   },
   "require-dev": {
@@ -59,7 +59,10 @@
   "extra": {
     "wordpress-install-dir": "html/wp",
     "installer-paths": {
-      "html/app/plugins-mu/{$name}/": ["type:wordpress-muplugin"],
+      "html/app/plugins-mu/{$name}/": [
+				"type:wordpress-muplugin",
+				"wpackagist-plugin/cmb2"
+			],
       "html/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "html/app/themes/{$name}/": ["type:wordpress-theme"]
     }
