--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ html/app/plugins-mu/*
 !html/app/plugins-mu/ti-widgets.php
 !html/app/plugins-mu/ti-wordpress-seo.php
 !html/app/plugins-mu/cmb2.php
+!html/app/plugins-mu/hm-gtm.php
 
 ### Themes
 .sass-cache
