Add editor stylesheet

--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,6 @@ html/app/themes/*
 
 #### CTBA 2016
 html/app/themes/ctba-2016/style.css
+html/app/themes/ctba-2016/editor-style.css
 html/app/themes/ctba-2016/bower_components/
 html/app/themes/ctba-2016/node_modules/
