--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ html/app/plugins-mu/*
 !html/app/plugins-mu/ti-roles-and-capabilities.php
 !html/app/plugins-mu/ti-widgets.php
 !html/app/plugins-mu/ti-wordpress-seo.php
+!html/app/plugins-mu/ti-security.php
 !html/app/plugins-mu/cmb2.php
 !html/app/plugins-mu/hm-gtm.php
 
