--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ html/app/plugins-mu/*
 !html/app/plugins-mu/ti-security.php
 !html/app/plugins-mu/cmb2.php
 !html/app/plugins-mu/hm-gtm.php
+!html/app/plugins-mu/tm-multisite-signup.php
 
 ### Themes
 .sass-cache
